# smart_chair

./: CMakeLists.txt  Common.h  Makefile  README.md  build.sh  main.h  partitions.csv  sdkconfig  sdkconfig.old
components/json_parser/: CMakeLists.txt  json_parser.c  json_parser.h
components/logger_file/: CMakeLists.txt  logger_file.c  logger_file.h
components/peripheral/: CMakeLists.txt  user_timer.c  user_timer.h  user_uart.c  user_uart.h
components/sht3x/: CMakeLists.txt  esp8266_wrapper.c  esp8266_wrapper.h  sht3x.h  sht3x_platform.h
components/task/: CMakeLists.txt  mqtt_task.c  mqtt_task.h  ota_task.c  ota_task.h  plan_task.c  plan_task.h  uart_task.c  uart_task.h  wifi_task.c
components/user_driver/: CMakeLists.txt
components/user_driver/dust_sensor/: dust_sensor.c  dust_sensor.h
components/user_driver/led/: led_driver.c  led_driver.h
components/user_driver/rain_sensor/: rain_sensor.c  rain_sensor.h
components/user_driver/sht30_sensor/: sht30_sensor.c  sht30_sensor.h
main/: main.c
